# swagger-output.json
@@ -1913,6 +1913,105 @@
           }
         ]
       }
+    },
+    "/api/v1/management-people/workers/getWorkers": {
+      "get": {
+        "tags": [
+          "Management People - Workers"
+        ],
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "code": {
+                  "type": "string",
+                  "example": "OK"
+                },
+                "workers": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "id": {
+                        "type": "number",
+                        "example": 2
+                      },
+                      "rut": {
+                        "type": "string",
+                        "example": "12345678-9"
+                      },
+                      "name": {
+                        "type": "string",
+                        "example": "Juan"
+                      },
+                      "lastname": {
+                        "type": "string",
+                        "example": "Perez"
+                      },
+                      "lastname2": {
+                        "type": "string",
+                        "example": "Perez"
+                      },
+                      "born_date": {
+                        "type": "string",
+                        "example": "1990-01-01"
+                      },
+                      "gender": {
+                        "type": "string",
+                        "example": "Masculino"
+                      },
+                      "state_civil": {
+                        "type": "string",
+                        "example": "Soltero"
+                      },
+                      "state": {
+                        "type": "string",
+                        "example": "Maule"
+                      },
+                      "city": {
+                        "type": "string",
+                        "example": "Talca"
+                      },
+                      "address": {
+                        "type": "string",
+                        "example": "Calle 123"
+                      },
+                      "phone": {
+                        "type": "string",
+                        "example": "12345678"
+                      },
+                      "phone_company": {
+                        "type": "string",
+                        "example": "12345678"
+                      },
+                      "date_admission": {
+                        "type": "string",
+                        "example": "2021-01-01"
+                      },
+                      "status": {
+                        "type": "number",
+                        "example": 1
+                      }
+                    }
+                  }
+                }
+              },
+              "xml": {
+                "name": "main"
+              }
+            }
+          }
+        },
+        "security": [
+          {
+            "apiKeyAuth": []
+          }
+        ]
+      }
     }
   }
 }
